--- a/css/foundation.css
+++ b/css/foundation.css
@@ -745,10 +745,15 @@ nav#primary-nav ul li.active a,   nav#primary-nav ul li.active a:hover {
   text-align: center;
   padding-top: 70px;
 }
+#logo-box-mobile {
+  text-align: center;
+  padding-top: 70px;
+  display: none;
+}
 
 /* Header Test */
 header h2 {
-  margin: 44px 0 30px;
+  margin: 30px 0 30px;
   font-size: 34px;
   line-height: 130%;
   color: #333;
@@ -1060,10 +1065,17 @@ footer #address p strong {
 
 
 /*  fixes for small screens */
-
-@media only screen and (max-width: 382px) {
+@media only screen and (max-width: 382px) and (min-device-width: 382px) and (min-device-width: 320px) {
+  #logo-box {
+    display: none;
+  }
+  #logo-box-mobile {
+    display: block;
+  }
   nav#primary-nav {
     font-size: 12px;
+    width: 101%;
+    margin: 0px;
   }
   nav#primary-nav ul {
     padding: 6px 0px;
@@ -1079,4 +1091,44 @@ footer #address p strong {
     margin-left: 0px;
     float: left;
   }
+  .team-box .team-content h3 {
+    margin-top: 16px;
+  }
+  .team-box .team-icon {
+    margin-left: -13px;
+    margin-top: 16px;
+  }
+  .office-culture .blue-dot {
+    margin-left: -16px;
+  }
+  #detail-wrapper {
+    padding: 14px 0;
+  }
+  #detail-wrapper .detail-sub {
+    margin: 0 auto;
+    display: table;
+    float: none;
+  }
+  #detail-wrapper .detail-box {
+    border: none;
+  }
+  #intro-boxes-outer {
+    background-color: #e9e9e9;
+  }
+  .sm-tech-box {
+    margin: 7px auto !important;
+    width: 100%;
+  }
+  .sm-tech-box h5 {
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .apply-box ol, .apply-box p {
+    font-size: 14px;
+  }
+  .apply-box {
+    padding: 30px 25px 30px;
+    margin-top: 50px;
+  }
+
 }
